--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -25,7 +25,7 @@ jobs:
         run: yarn run docs:build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: actions/deploy-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./.vitepress/dist
