add upload artifact

--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -24,8 +24,11 @@ jobs:
       - name: Build
         run: yarn run docs:build
 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.vitepress/dist'
+
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./.vitepress/dist
